refactor: optimize cards with bg-* class

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -43,15 +43,14 @@
 }
 
 // Cards with color accent
-@include theme-variant() {
-  .card.bg-#{$color} {
-    border-color: darken($value, 12.5%);
-    .card-header {
-      background-color: darken($value, 3%);
-      border-color: darken($value, 12.5%);
-    }
+.card[class^="bg-"], .card[class*=" bg-"] {
+  border-color: rgba(0, 0, 0, .125); //darken($value, 12.5%);
+  .card-header {
+    background-color: rgba(0, 0, 0, .05); //darken($value, 3%);
+    border-color: rgba(0, 0, 0, .125); //darken($value, 12.5%);
   }
 }
+
 .card-body {
   // Enable `flex-grow: 1` for decks and groups so that card blocks take up
   // as much space as possible, ensuring footers are aligned to the bottom.
