--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -88,8 +88,15 @@
 }
 
 // Request a theme color level
-@function theme-color-level($color-name: "primary", $level: 0) {
-  $color: theme-color($color-name);
+// @function theme-color-level($color-name: "primary", $level: 0) {
+//   $color: theme-color($color-name);
+//   $color-base: if($level > 0, $black, $white);
+//   $level: abs($level);
+
+//   @return mix($color-base, $color, $level * $theme-color-interval);
+// }
+
+@function theme-color-level($color, $level: 0) {
   $color-base: if($level > 0, $black, $white);
   $level: abs($level);
 
