--- a/scss/mixins/_themes.scss
+++ b/scss/mixins/_themes.scss
@@ -251,6 +251,29 @@ $theme-has-variants: false !default;
   }
 }
 
+@mixin theme-gradients() {
+  @each $theme in map-keys($default-themes) {
+    $get-default: map-get(map-get($default-themes, $theme), "default");
+    $get-gradients: map-get(map-get($default-themes, $theme), "gradients");
+    @each $gradient, $value in $get-gradients {
+      $gradient: $gradient !global;
+      $value: $value !global;
+      @if $get-default {
+        @content;
+      } @else {
+        $default-gradient: map-get(map-get(map-get($default-themes, default-theme()), "gradients"), $gradient);
+        @if $default-gradient != $value {
+          @at-root{
+            .c-#{$theme}#{$theme-suffix} {
+              @content;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 @mixin theme-get-color($color) {
   @each $theme in map-keys($default-themes) {
     $get-color: map-get(map-get(map-get($default-themes, $theme), "theme-colors"), $color);
